--- a/resources/views/portfolio.antlers.html
+++ b/resources/views/portfolio.antlers.html
@@ -1,4 +1,4 @@
-<div class="w-full bg-blue-200 h-[10rem] text-center">
+<div class="flex relative w-full min-h-full bg-blue-200 h-[10rem] top-[5rem] text-center">
 
   {{ title }}
 
